--- a/Demo.Presentation/Views/_ViewImports.cshtml
+++ b/Demo.Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Demo.Presentation
 @using Demo.Presentation.ViewModels
+@using Demo.BusinessLogic.DataTransferObjects
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
