--- a/Demo.Presentation/Views/Department/Index.cshtml
+++ b/Demo.Presentation/Views/Department/Index.cshtml
@@ -29,7 +29,7 @@
 					<td>@deparment.Name</td>
 					<td>@deparment.Description</td>
 					<td>@deparment.CreatedOn</td>
-					<td><a class="btn btn-primary" asp-action="Details"><i class="fas fa-eye"></i> Details</a></td>
+					<td><a class="btn btn-primary" asp-action="Details" asp-route-id="@deparment.Id"><i class="fas fa-eye"></i> Details</a></td>
 					<td><a class="btn btn-success" asp-action="Edit"><i class="fas fa-edit"></i> Edit</a></td>
 					<td><a class="btn btn-danger" asp-action="Delete"><i class="fas fa-trash"></i> Delete</a></td>
 				</tr>
