--- a/Demo.Presentation/Views/Department/Index.cshtml
+++ b/Demo.Presentation/Views/Department/Index.cshtml
@@ -31,7 +31,30 @@
 					<td>@deparment.CreatedOn</td>
 					<td><a class="btn btn-primary" asp-action="Details" asp-route-id="@deparment.Id"><i class="fas fa-eye"></i> Details</a></td>
 					<td><a class="btn btn-success" asp-action="Edit" asp-route-id="@deparment.Id"><i class="fas fa-edit"></i> Edit</a></td>
-					<td><a class="btn btn-danger" asp-action="Delete"><i class="fas fa-trash"></i> Delete</a></td>
+					<td>
+						<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#DeleteModal-@deparment.Id">
+							<i class="fas fa-trash"></i> Delete
+						</button>
+						<div class="modal fade" id="DeleteModal-@deparment.Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h1 class="modal-title fs-5" id="exampleModalLabel">Delete Department</h1>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										Are You Sure to Delete this Department?
+									</div>
+									<div class="modal-footer">
+										<form asp-action="Delete" asp-controller="Department" asp-route-id="@deparment.Id" class="mt-4">
+											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+											<input type="submit" value="Delete" class="btn btn-danger" />
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</td>
 				</tr>
 			}
 		</tbody>
@@ -43,3 +66,6 @@ else
 		No departments found.
 	</div>
 }
+
+
+
