--- a/Demo.Presentation/Views/Department/Create.cshtml
+++ b/Demo.Presentation/Views/Department/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model CreatedDepartmentDto
+﻿@using Demo.BusinessLogic.DataTransferObjects.Department
+@model CreatedDepartmentDto
 <div class="row justify-content-center align-content-center mt-3">
     <h1 class="col-8 my-4">Create Department</h1>
 
