--- a/Demo.Presentation/Views/Department/Index.cshtml
+++ b/Demo.Presentation/Views/Department/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Demo.BusinessLogic.DataTransferObjects
+﻿
+@using Demo.BusinessLogic.DataTransferObjects.Department
 @model IEnumerable<DepartmentDto>
 @{
 	ViewData["Title"] = "Departments";
