--- a/Demo.Presentation/Views/Employee/Create.cshtml
+++ b/Demo.Presentation/Views/Employee/Create.cshtml
@@ -10,68 +10,7 @@
 <div class="row justify-content-center align-content-center mt-3">
     <h1 class="col-8 my-4">Create Employee</h1>
     <form method="post" asp-controller="Employee" asp-action="Create" class=" row col-8" enctype="multipart/form-data">
-        <div asp-validation-summary="ModelOnly"></div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="Name"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="Email"></label>
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="Address"></label>
-            <input asp-for="Address" class="form-control" />
-            <span asp-validation-for="Address" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="PhoneNumber"></label>
-            <input asp-for="PhoneNumber" class="form-control" />
-            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="Age"></label>
-            <input asp-for="Age" class="form-control" />
-            <span asp-validation-for="Age" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="HireDate"></label>
-            <input type="date" asp-for="HireDate" class="form-control" />
-            <span asp-validation-for="HireDate" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="Salary"></label>
-            <input asp-for="Salary" class="form-control" />
-            <span asp-validation-for="Salary" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <input asp-for="IsActive" class="form-check-input" />
-            <label class="col-form-label" asp-for="IsActive"></label>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="EmployeeType"></label>
-            <select asp-for="EmployeeType" asp-items="Html.GetEnumSelectList<EmployeeType>()">
-                <option value="">Select Employee Type</option>
-            </select>
-			<span asp-validation-for="EmployeeType" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-3 col-6">
-            <label class="form-label" asp-for="Gender"></label>
-            @foreach (var e in Enum.GetValues<Gender>()) 
-            {
-                <div class="form-check form-check-inline">
-                <input type="radio" asp-for="Gender" value="@e" />
-				<label class="col-form-label">@e</label>
-                </div>
-            }
-            <span asp-validation-for="Gender" class="text-danger"></span>
-        </div>
-        <div class="mt-4 m-auto">
-            <input class="btn btn-primary" type="submit" value="Save" />
-            <a asp-controller="Employee" asp-action="Index" class="btn btn-outline-dark">Back to list</a>
-        </div>
+        <partial name="EmployeePartialView/_employee" />
     </form>
 </div>
 
