--- a/Demo.Presentation/Views/Employee/Details.cshtml
+++ b/Demo.Presentation/Views/Employee/Details.cshtml
@@ -59,6 +59,10 @@
                 <input asp-for="IsActive" class="form-check-input" disabled />
                 <label class="col-form-label" asp-for="IsActive"></label>
             </div>
+            <div class="form-group mb-3 col-6">
+                <label class="col-form-label" asp-for="Department"></label>
+                <input asp-for="Department" class="form-control" readonly />
+            </div>
         </div>
     </div>
 
@@ -79,7 +83,7 @@
         <div class="form-group  col-12">
             <label class="col-form-label" asp-for="LastModifiedOn"></label>
             <input asp-for="LastModifiedOn" class="form-control" readonly />
-        </div>
+        </div>        
     </div>
     <div class="mt-4">
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-success">Edit</a>
