--- a/Demo.Presentation/Views/Employee/EmployeePartialView/_employee.cshtml
+++ b/Demo.Presentation/Views/Employee/EmployeePartialView/_employee.cshtml
@@ -67,7 +67,7 @@
 </div>
 <div class="form-group mb-3">
     <label class="form-label">Department</label>
-    <select asp-for="Id" asp-items="departments">
+    <select asp-for="DepartmentId" asp-items="departments">
         <option value="@null">Select Department</option>
     </select>
 </div>
