--- a/Demo.Presentation/Views/Employee/Index.cshtml
+++ b/Demo.Presentation/Views/Employee/Index.cshtml
@@ -18,6 +18,7 @@
                 <th>@Html.DisplayNameFor(e => e.Email)</th>
                 <th>@Html.DisplayNameFor(e => e.EmployeeType)</th>
                 <th>@Html.DisplayNameFor(e => e.Age)</th>
+                <th>@Html.DisplayNameFor(e => e.Department)</th>
                 <th>@Html.DisplayNameFor(e => e.Salary)</th>
                 <th>@Html.DisplayNameFor(e => e.IsActive)</th>
                 <th>@Html.DisplayNameFor(e => e.Gender)</th>
@@ -35,6 +36,16 @@
                     <td>@employee.Email</td>
                     <td>@employee.EmployeeType</td>
                     <td>@employee.Age</td>
+					<td>
+						@if (employee.Department != null)
+						{
+							@employee.Department
+						}
+						else
+						{
+							<span class="text-danger">No Department</span>
+						}
+					</td>
                     <td>@Html.DisplayFor(e => employee.Salary)</td>
                     <td>
                         <i class="fa @(employee.IsActive ? "fa-solid fa-circle-check text-success" : "fa-times-circle text-danger") "></i>
